--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.browser:browser:1.2.0'
     implementation 'androidx.exifinterface:exifinterface:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -41,24 +41,27 @@ dependencies {
     implementation 'com.github.ornolfr:rating-view:0.1.2@aar'
     implementation 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation 'com.google.android.gms:play-services-ads:19.0.1'
+    implementation 'com.google.android.gms:play-services-ads:19.3.0'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.onesignal:OneSignal:3.12.4@aar'
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.mobsandgeeks:android-saripaar:2.0.2'
-    implementation 'com.github.ixiDev:GDPRChecker:v0.2'
-    implementation 'com.google.android.ads.consent:consent-library:1.0.8'
+
     implementation 'com.github.halilozercan:BetterVideoPlayer:1.1.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation project(':vitamio')
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.firebase:firebase-core:17.3.0'
+    implementation 'com.google.firebase:firebase-core:17.5.0'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+    implementation 'com.google.android.ump:user-messaging-platform:1.0.0'
+    implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.1.0'
+
+
 
 
 
